--- a/RoyalBikeSmith/templates/index.html
+++ b/RoyalBikeSmith/templates/index.html
@@ -97,8 +97,8 @@
 	          <div class="row no-gutters slider-text align-items-center justify-content-start">
 		          <div class="col-md-6 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>We are best motorbike repair services</h2>
-			            <h1 class="mb-4">Make your motorbike last longer</h1>
+		          		<h2>We are best motorcycle repair services</h2>
+			            <h1 class="mb-4">Make your motorcycle last longer</h1>
 			            <p><a href="#" class="btn btn-primary">Book an appointment</a></p>
 		            </div>
 		          </div>
@@ -112,8 +112,8 @@
 	          <div class="row no-gutters slider-text align-items-center justify-content-start">
 		          <div class="col-md-6 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>We care about your motorbike</h2>
-			            <h1 class="mb-4">It's time to come to repair your motorbike</h1>
+		          		<h2>We care about your motorcycle</h2>
+			            <h1 class="mb-4">It's time to come to repair your motorcycle</h1>
 			            <p><a href="#" class="btn btn-primary">Book an appointment</a></p>
 		            </div>
 		          </div>
@@ -145,7 +145,7 @@
 		<div class="row justify-content-center pb-5 mb-3">
 	  <div class="col-md-7 heading-section text-center ftco-animate">
 		  <span class="subheading">We offer Services</span>
-		<h2>Our car services</h2>
+		<h2>Our motorcycle services</h2>
 	  </div>
 	</div>
 		<div class="row">
@@ -156,7 +156,7 @@
 		  </div>
 		  <div class="media-body pl-3">
 			<h3 class="heading">Oil change</h3>
-			<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+			<p>Engine oil is used to protect the metal parts which are sliding over each others surface from getting wear out , e.g, piston rings sliding on cylinder surface, crank and connecting rod bearing etc. Oil is used to lubricate and transfer heat in engine.</p>
 			<p><a href="#" class="btn-custom">Read more</a></p>
 		  </div>
 		</div>
@@ -166,7 +166,7 @@
 		  </div>
 		  <div class="media-body pl-3">
 			<h3 class="heading">Tire Change</h3>
-			<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+			<p>Once you’ve acquired a decision for replacement of your motorcycle tire, you can start your motorcycle tire change at our store. We have all kinds of tire for your bike. </p>
 			<p><a href="#" class="btn-custom">Read more</a></p>
 		  </div>
 		</div> 
@@ -179,7 +179,7 @@
 		  </div>
 		  <div class="media-body pl-3">
 			<h3 class="heading">Batteries</h3>
-			<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+			<p>A dead battery may be the result of a few weeks of neglect or leaving the key in the on position for more than a few minutes. Sometimes, it’s an electrical issue and changing or charging the battery won’t make a whit of difference.</p>
 			<p><a href="#" class="btn-custom">Read more</a></p>
 		  </div>
 		</div> 
@@ -189,7 +189,7 @@
 		  </div>
 		  <div class="media-body pl-3">
 			<h3 class="heading">Engine Repair</h3>
-			<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+			<p>Get superior maintenance and repairs at affordable prices. We specialize in motorcycles and will perform repairs on all make and models.</p>
 			<p><a href="#" class="btn-custom">Read more</a></p>
 		  </div>
 		</div>    
@@ -202,7 +202,7 @@
 		  </div>
 		  <div class="media-body pl-3">
 			<h3 class="heading">Tow Truck</h3>
-			<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+			<p> Your bike has broken down, needs to be transported for a roadworthy, maintenance, storage or simply relocated – we are the first choice for a safe, dependable and quality accredited towing and transport service.</p>
 			<p><a href="#" class="btn-custom">Read more</a></p>
 		  </div>
 		</div>
@@ -211,8 +211,8 @@
 				<span class="flaticon-repair"></span>
 		  </div>
 		  <div class="media-body pl-3">
-			<h3 class="heading">Car Maintenance</h3>
-			<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+			<h3 class="heading">Bike Maintenance</h3>
+			<p>Quality & Reliable Service. Motorcycle Repair, Service, & Custom Bike Fitting. Visit Us Today! Serving since 2020. Large selection of bikes. Dedicated technicians.</p>
 			<p><a href="#" class="btn-custom">Read more</a></p>
 		  </div>
 		</div>       
@@ -234,8 +234,8 @@
 			<div class="col-md-6 pl-md-5">
 				<div class="row justify-content-start py-5">
 			  <div class="col-md-12 heading-section ftco-animate">
-				  <span class="subheading">Welcome to Autorepair</span>
-				<h2 class="mb-4">We help more than 45 years serving customer car</h2>
+				  <span class="subheading">Welcome to Royal Bike Smith</span>
+				<h2 class="mb-4">We help more than 2500 years serving customer bike</h2>
 				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
 </p>
 				<div class="tabulation-2 mt-4">
