--- a/RoyalBikeSmith/templates/index.html
+++ b/RoyalBikeSmith/templates/index.html
@@ -51,7 +51,7 @@
 							<div class="col-md-3 d-flex justify-content-end align-items-center">
 								<div class="social-media">
 					    		<p class="mb-0 d-flex">
-					    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
+					    			<a href="https://www.facebook.com/Royalbikesmith/" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
 					    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
 					    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
 					    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
@@ -201,8 +201,8 @@
 				<span class="flaticon-tow-truck"></span>
 		  </div>
 		  <div class="media-body pl-3">
-			<h3 class="heading">Tow Truck</h3>
-			<p> Your bike has broken down, needs to be transported for a roadworthy, maintenance, storage or simply relocated – we are the first choice for a safe, dependable and quality accredited towing and transport service.</p>
+			<h3 class="heading">Motorcycle Parts</h3>
+			<p> We are the customer's most trusted source for motorcycle parts and aftermarket motorcycle parts. Visit Us Today and know the spare parts details and price. Parts is used to maintaine and transfer performance in engine.</p>
 			<p><a href="#" class="btn-custom">Read more</a></p>
 		  </div>
 		</div>
@@ -225,40 +225,37 @@
 	<div class="container">
 		<div class="row d-flex no-gutters">
 			<div class="col-md-6 d-flex">
-				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center mb-4 mb-sm-0" style="background-image:url(images/about.jpg);">
-					<a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-						<span class="fa fa-play"></span>
-					</a>
+				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center mb-4 mb-sm-0" style="background-image:url({% static 'images/about.jpg'%});">
 				</div>
 			</div>
 			<div class="col-md-6 pl-md-5">
 				<div class="row justify-content-start py-5">
 			  <div class="col-md-12 heading-section ftco-animate">
 				  <span class="subheading">Welcome to Royal Bike Smith</span>
-				<h2 class="mb-4">We help more than 2500 years serving customer bike</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+				<h2 class="mb-4">We help more than 2500 serving customer bike</h2>
+				<p>We are passionate about the riding community and all of those involved. Our background is in riding and mantaining motorcycle which evolved into a love for road bikes of all makes and models. Motor Bike Works exists to serve the community in a revolutionary manner.  We are riders ourselves, so we know motorcycle downtime is the worst, which is why we created MBW! Try out our fast lane services, service center, and mobile shop, so YOU can enjoy more ride time. 
 </p>
 				<div class="tabulation-2 mt-4">
 								<ul class="nav nav-pills nav-fill d-md-flex d-block">
 								  <li class="nav-item mb-md-0 mb-2">
-									<a class="nav-link active py-2" data-toggle="tab" href="#home1">Our Mission</a>
+									<a class="nav-link active py-2" data-toggle="tab" href="#home1">ANNUAL SERVICE</a>
 								  </li>
 								  <li class="nav-item px-lg-2 mb-md-0 mb-2">
-									<a class="nav-link py-2" data-toggle="tab" href="#home2">Our Vision</a>
+									<a class="nav-link py-2" data-toggle="tab" href="#home2">BODY WORK</a>
 								  </li>
 								  <li class="nav-item">
-									<a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#home3">Our Value</a>
+									<a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#home3">FULL REBUILD & RESTORATION</a>
 								  </li>
 								</ul>
 								<div class="tab-content rounded mt-2">
 								  <div class="tab-pane container p-0 active" id="home1">
-									  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  <p>The least you can do to ensure that your two-wheeler is safe and well maintained. It will last longer and so will you.</p>
 								  </div>
 								  <div class="tab-pane container p-0 fade" id="home2">
-									  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  <p>If it will be safe and look good, we can provide a full repair and painting service. Custom or standard, no problem.</p>
 								  </div>
 								  <div class="tab-pane container p-0 fade" id="home3">
-									  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  <p>Your baby will be treated with the care and expertise you would provide yourself, if you had the expertise. We do it together with you with our expertise, except we do the work.</p>
 								  </div>
 								</div>
 							</div>
@@ -275,17 +272,17 @@
 	  <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		<div class="block-18 text-center">
 		  <div class="text">
-			<strong class="number" data-number="45">0</strong>
+			<strong class="number" data-number="15">0</strong>
 		  </div>
 		  <div class="text">
-			  <span>Years of Experienced</span>
+			  <span>Years of Experienced Mechanic's</span>
 		  </div>
 		</div>
 	  </div>
 	  <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		<div class="block-18 text-center">
 		  <div class="text">
-			<strong class="number" data-number="8500">0</strong>
+			<strong class="number" data-number="2300">0</strong>
 		  </div>
 		  <div class="text">
 			  <span>Project completed</span>
@@ -295,7 +292,7 @@
 	  <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		<div class="block-18 text-center">
 		  <div class="text">
-			<strong class="number" data-number="2342">0</strong>
+			<strong class="number" data-number="2000">0</strong>
 		  </div>
 		  <div class="text">
 			  <span>Happy Customers</span>
@@ -305,10 +302,10 @@
 	  <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		<div class="block-18 text-center">
 		  <div class="text">
-			<strong class="number" data-number="30">0</strong>
+			<strong class="number" data-number="1">0</strong>
 		  </div>
 		  <div class="text">
-			  <span>Award Winning</span>
+			  <span>Service Center</span>
 		  </div>
 		</div>
 	  </div>
@@ -316,7 +313,7 @@
 	</div>
 </section>
 
-	<section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url(images/bg_3.jpg);">
+	<section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url({% static 'images/bg_3.jpg'%});">
 		<div class="overlay"></div>
 	<div class="container">
 		<div class="row d-md-flex justify-content-end">
@@ -385,7 +382,7 @@
 	</div>
 </section>
 
-<section class="ftco-section testimony-section bg-light">
+<!-- <section class="ftco-section testimony-section bg-light">
   <div class="container">
 	<div class="row justify-content-center pb-5 mb-3">
 	  <div class="col-md-7 heading-section heading-section-white text-center ftco-animate">
@@ -475,9 +472,9 @@
 	  </div>
 	</div>
   </div>
-</section>
+</section> -->
 	
-	<section class="ftco-section">
+	<!-- <section class="ftco-section">
   <div class="container">
 	<div class="row justify-content-center pb-5 mb-3">
 	  <div class="col-md-7 heading-section text-center ftco-animate">
@@ -536,7 +533,7 @@
 	  </div>
 	</div>
   </div>
-</section>
+</section> -->
 
 <section class="ftco-section bg-light">
 	<div class="container">
@@ -550,11 +547,11 @@
 			<div class="col-md-6 col-lg-3 ftco-animate">
 		  <div class="block-7">
 			<div class="text-center">
-			<span class="excerpt d-block">First PMS</span>
-			<span class="price"><sup>$</sup> <span class="number">78.98</span></span>
+			<span class="excerpt d-block">Royal Enfield Servicing</span>
+			<span class="price"><sup>RS</sup> <span class="number">2600</span></span>
 			
 			<div class="pricing-text">
-			  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+			  <p>Full Body Check up, Mobil, Airfilter, Mobile Filter, Core Oiling, Greasing, Perfect Wash</p>
 			</div>
 
 			<a href="#" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
@@ -564,11 +561,11 @@
 		<div class="col-md-6 col-lg-3 ftco-animate">
 		  <div class="block-7">
 			<div class="text-center">
-			<span class="excerpt d-block">Engine Diagnostics</span>
-			<span class="price"><sup>$</sup> <span class="number">83.75</span></span>
+			<span class="excerpt d-block">Servicing Using Motul</span>
+			<span class="price"><sup>RS</sup> <span class="number">3550</span></span>
 			
 			<div class="pricing-text">
-			  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+			  <p>Full Body Check up, Mobil (Motul), Airfilter, Mobile Filter, Core Oiling, Greasing, Perfect Wash</p>
 			</div>
 
 			<a href="#" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
@@ -578,11 +575,11 @@
 		<div class="col-md-6 col-lg-3 ftco-animate">
 		  <div class="block-7">
 			<div class="text-center">
-			<span class="excerpt d-block">Tow Truck</span>
-			<span class="price"><sup>$</sup> <span class="number">85.00</span></span>
+			<span class="excerpt d-block">Royal Enfield Servicing</span>
+			<span class="price"><sup>RS</sup> <span class="number">2600</span></span>
 			
 			<div class="pricing-text">
-			  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+			  <p>Full Body Check up, Mobil, Airfilter, Mobile Filter, Core Oiling, Greasing, Perfect Wash</p>
 			</div>
 
 			<a href="#" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
@@ -592,11 +589,11 @@
 		<div class="col-md-6 col-lg-3 ftco-animate">
 		  <div class="block-7">
 			<div class="text-center">
-			<span class="excerpt d-block">Car Wash</span>
-			<span class="price"><sup>$</sup> <span class="number">30.50</span></span>
+			<span class="excerpt d-block">Servicing Using Motul</span>
+			<span class="price"><sup>RS</sup> <span class="number">3550</span></span>
 			
 			<div class="pricing-text">
-			  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+			  <p>Full Body Check up, Mobil (Motul), Airfilter, Mobile Filter, Core Oiling, Greasing, Perfect Wash</p>
 			</div>
 
 			<a href="#" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
@@ -619,23 +616,19 @@
 		<div class="container-fluid px-md-0">
 			<div class="row no-gutters">
 	  <div class="col-md-3 ftco-animate">
-		<div class="work img d-flex align-items-end" style="background-image: url(images/work-1.jpg);">
-			<a href="images/work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-						<span class="fa fa-expand"></span>
-					</a>
+		<div class="work img d-flex align-items-end" style="background-image: url({% static 'images/work-1.jpg'%});">
+			
 			<div class="desc w-100 px-4">
 			  <div class="text w-100 mb-3">
 				  <span>Engine</span>
-				  <h2><a href="work-single.html">Engine Testing Complated</a></h2>
+				  <h2><a href="work-single.html">Engine Diagnostics</a></h2>
 			  </div>
 		  </div>
 		</div>
 	  </div>
 	  <div class="col-md-3 ftco-animate">
-		<div class="work img d-flex align-items-end" style="background-image: url(images/work-2.jpg);">
-			<a href="images/work-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-						<span class="fa fa-expand"></span>
-					</a>
+		<div class="work img d-flex align-items-end" style="background-image: url({% static 'images/work-2.jpg'%});">
+		
 			<div class="desc w-100 px-4">
 			  <div class="text w-100 mb-3">
 				  <span>Oil Change</span>
@@ -645,28 +638,23 @@
 		</div>
 	  </div>
 	  <div class="col-md-3 ftco-animate">
-		<div class="work img d-flex align-items-end" style="background-image: url(images/work-3.jpg);">
-			<a href="images/work-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-						<span class="fa fa-expand"></span>
-					</a>
+		<div class="work img d-flex align-items-end" style="background-image: url({% static 'images/work-3.jpg' %} );">
 			<div class="desc w-100 px-4">
 			  <div class="text w-100 mb-3">
 				  <span>Engine</span>
-				  <h2><a href="work-single.html">Engine Diagnostics</a></h2>
+				  <h2><a href="work-single.html">Chain replacement</a></h2>
 			  </div>
 		  </div>
 		</div>
 	  </div>
 
 	  <div class="col-md-3 ftco-animate">
-		<div class="work img d-flex align-items-end" style="background-image: url(images/work-4.jpg);">
-			<a href="images/work-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-						<span class="fa fa-expand"></span>
-					</a>
+		<div class="work img d-flex align-items-end" style="background-image: url({% static 'images/work-4.jpg' %});">
+			
 			<div class="desc w-100 px-4">
 			  <div class="text w-100 mb-3">
 				  <span>Tire</span>
-				  <h2><a href="work-single.html">Tire Change</a></h2>
+				  <h2><a href="work-single.html">Engine Testing Complated</a></h2>
 			  </div>
 		  </div>
 		</div>
@@ -680,11 +668,11 @@
 	<div class="row mb-5">
 	  <div class="col-md-6 col-lg">
 		<div class="ftco-footer-widget mb-4">
-		  <h2 class="logo"><a href="#">Autorepair<span>.</span></a></h2>
-		  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		  <h2 class="logo"><a href="#">RoyalBIKEsmith<span>.</span></a></h2>
+		  <p>Stop By Royal Bike Smith Today For Fast And Friendly Service. Give Us A Call Now! Royal Bike Smith Is Your One Stop Shop For All Things All kinds Motorcycle! </p>
 		  <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
 			<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-			<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
+			<li class="ftco-animate"><a href="https://www.facebook.com/Royalbikesmith/"><span class="fa fa-facebook"></span></a></li>
 			<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
 		  </ul>
 		</div>
@@ -695,7 +683,7 @@
 		  <ul class="list-unstyled">
 			<li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Oil Change</a></li>
 			<li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Batteries</a></li>
-			<li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Tow Truck</a></li>
+			<li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Chain Replacment</a></li>
 			<li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Tire Change</a></li>
 			<li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Engine Repair</a></li>
 		  </ul>
@@ -706,9 +694,9 @@
 			<h2 class="ftco-heading-2">Contact information</h2>
 			<div class="block-23 mb-3">
 			  <ul>
-				<li><span class="icon fa fa-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-				<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-				<li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">info@yourdomain.com</span></a></li>
+				<li><span class="icon fa fa-map-marker"></span><span class="text">Kupandol, Lalitpur, Kathmandu, Nepal</span></li>
+				<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+977 9841982128, 9861506646</span></a></li>
+				<li><a href="https://www.facebook.com/Royalbikesmith/"><span class="icon fa fa-paper-plane"></span><span class="text">facebook.com/Royalbikesmith</span></a></li>
 			  </ul>
 			</div>
 		</div>
@@ -719,14 +707,14 @@
 		  <div class="opening-hours">
 			  <h4>Opening Days:</h4>
 			  <p class="pl-3">
-				  <span>Monday – Friday : 9am to 20 pm</span>
-				  <span>Saturday : 9am to 17 pm</span>
+				  <span>Sunday – Friday : 9:40am to 6:40pm</span><br>
+				  <span>Saturday : 9:40am to 3:30pm</span>
 			  </p>
 			  <h4>Vacations:</h4>
-			  <p class="pl-3">
+			  <!-- <p class="pl-3">
 				  <span>All Sunday Days</span>
 				  <span>All Official Holidays</span>
-			  </p>
+			  </p> -->
 		  </div>
 		</div>
 	  </div>
@@ -735,7 +723,7 @@
 	  <div class="col-md-12 text-center">
 
 		<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Royal Bike Smith
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 	  </div>
 	</div>
