--- a/RoyalBikeSmith/user/templates/includes/footer.html
+++ b/RoyalBikeSmith/user/templates/includes/footer.html
@@ -4,8 +4,7 @@
         <div class="row align-items-center justify-content-xl-between">
           <div class="col-xl-6">
             <div class="text-center text-xl-left text-muted">
-              <a href="#" 
-                 class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
+              <a href="#" class="font-weight-bold ml-1" target="_blank">RoyalBIKEsmith Dashboards</a>
             </div>
           </div>
           <div class="col-xl-6">
