--- a/RoyalBikeSmith/templates/index.html
+++ b/RoyalBikeSmith/templates/index.html
@@ -85,7 +85,13 @@
 	        	<li class="nav-item"><a href="#" class="nav-link">Project</a></li>
 	        	<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
 	          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-			  <li class="nav-item active"><a href="{% url 'login' %}" class="nav-link">Login</a></li>
+			  <li class="nav-item active">
+				  {% if request.user.is_authenticated %}
+				  <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+				  {% else %}
+				  <a href="{% url 'login' %}" class="nav-link">Login</a>
+					{% endif %}
+				</li>
 	        </ul>
 	      </div>
 	    </div>
