--- a/RoyalBikeSmith/user/templates/includes/navigation.html
+++ b/RoyalBikeSmith/user/templates/includes/navigation.html
@@ -43,10 +43,10 @@
             </div>
             <!-- List group -->
             <div class="list-group list-group-flush">
-              <a href="#!" class="list-group-item list-group-item-action">
+              <!-- <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                  
                     <img alt="Image placeholder" src="/static/assets/img/theme/team-1.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -65,7 +65,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                  
                     <img alt="Image placeholder" src="/static/assets/img/theme/team-2.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -84,7 +84,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                  
                     <img alt="Image placeholder" src="/static/assets/img/theme/team-3.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -103,7 +103,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                  
                     <img alt="Image placeholder" src="/static/assets/img/theme/team-4.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -122,7 +122,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                  
                     <img alt="Image placeholder" src="/static/assets/img/theme/team-5.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -137,7 +137,7 @@
                     <p class="text-sm mb-0">A new issue has been reported for Argon.</p>
                   </div>
                 </div>
-              </a>
+              </a> -->
             </div>
             <!-- View all -->
             <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">View all</a>
@@ -149,7 +149,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-dark bg-default  dropdown-menu-right ">
             <div class="row shortcuts px-4">
-              <a href="#!" class="col-4 shortcut-item">
+              <!-- <a href="#!" class="col-4 shortcut-item">
                 <span class="shortcut-media avatar rounded-circle bg-gradient-red">
                   <i class="ni ni-calendar-grid-58"></i>
                 </span>
@@ -184,7 +184,7 @@
                   <i class="ni ni-basket"></i>
                 </span>
                 <small>Shop</small>
-              </a>
+              </a> -->
             </div>
           </div>
         </li>
@@ -207,14 +207,14 @@
             <div class="dropdown-header noti-title">
               <h6 class="text-overflow m-0">Welcome!</h6>
             </div>
-            <a href="/profile.html" class="dropdown-item">
+            <!-- <a href="/profile.html" class="dropdown-item">
               <i class="ni ni-single-02"></i>
               <span>My profile</span>
             </a>
             <a target="_blank" href="http://appseed.us/support" class="dropdown-item">
               <i class="ni ni-support-16"></i>
               <span>Support</span>
-            </a>
+            </a> -->
             <div class="dropdown-divider"></div>
             <a href="{% url 'logout' %}" class="dropdown-item">
               <i class="ni ni-user-run text-red"></i>
