--- a/RoyalBikeSmith/templates/index.html
+++ b/RoyalBikeSmith/templates/index.html
@@ -84,7 +84,11 @@
 	        	<li class="nav-item"><a href="#" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="#" class="nav-link">Project</a></li>
 	        	<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
+			
 	          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+			  {% if request.user.is_authenticated %}
+			  <li class="nav-item"><a href="{% url 'dashboard' %}" class="nav-link">Dashboard</a></li>
+			  {% endif %}
 			  <li class="nav-item active">
 				  {% if request.user.is_authenticated %}
 				  <a href="{% url 'logout' %}" class="nav-link">Logout</a>
