--- a/RoyalBikeSmith/user/templates/includes/sidenav.html
+++ b/RoyalBikeSmith/user/templates/includes/sidenav.html
@@ -22,6 +22,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="dashboard/jobcard.html">
+              <i class="ni ni-collection text-danger"></i>
+              <span class="nav-link-text">Job Card</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="dashboard/tables.html">
               <i class="ni ni-bullet-list-67 text-default"></i>
               <span class="nav-link-text">Tables</span>
