--- a/RoyalBikeSmith/user/templates/includes/sidenav.html
+++ b/RoyalBikeSmith/user/templates/includes/sidenav.html
@@ -22,7 +22,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="dashboard/jobcard.html">
+            <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="{% url 'jobcard' %}">
               <i class="ni ni-collection text-danger"></i>
               <span class="nav-link-text">Job Card</span>
             </a>
