--- a/RoyalBikeSmith/user/templates/dashboard/jobcard.html
+++ b/RoyalBikeSmith/user/templates/dashboard/jobcard.html
@@ -1,19 +1,165 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %} Job Card {% endblock title %}
 
 {% block content %}
 
 
-<form method="POST">
+<!-- <form method="POST">
   {% csrf_token %}
   {{ customer.as_p }}
   {{ jobcard.as_p }}
   <input type="submit" value="Submit">
-</form>
+</form> -->
+
+<div class=" m-4 p-4">
+  <form method="POST">
+
+    {% csrf_token %}
+
+    <div class="form-row">
+      <div class="form-group col-md-2">
+        <label>First Name</label>
+        <input type="text" class="form-control"/>
+      </div>
+      <div class="form-group col-md-2">
+        <label>Last Name</label>
+        <input type="text" class="form-control" />
+      </div>
+      <div class="form-group col-md-2">
+        <label>Address</label>
+        <input type="text" class="form-control" />
+      </div>
+      <div class="form-group col-md-2">
+        <label>Mobile Number</label>
+        <input type="number" class="form-control" />
+      </div>
+      <div class="form-group col-md-2 ">
+        <label>Phone Number</label>
+        <input type="number" class="form-control"/>
+      </div>
+      <div class="form-group col-md-2 ">
+        <label>Vehicle Name</label>
+        <input type="text" class="form-control"/>
+      </div>
+    </div>
+
+    <div class="form-row mb-4">
+      <div class="form-group col-md-2 ">
+        <label>Vehicle Model</label>
+        <input type="text" class="form-control"/>
+      </div>
+      <div class="form-group col-md-2 ">
+        <label>Register Number</label>
+        <input type="text" class="form-control"/>
+      </div>
+      <div class="form-group col-md-2 ">
+        <label>Current Kilo-Meter</label>
+        <input type="number" class="form-control"/>
+      </div>
+
+      <div class="form-group col-md-2">
+        <label for="inputState">Maintenance Type</label>
+        <select id="inputState" class="form-control">
+          <option selected>Full Service</option>
+          <option>Chain</option>
+          <option>Timing</option>
+          <option>Valves</option>
+          <option>Carborator/FI</option>
+          <option>Oil/Filter</option>
+          <option>Wheel</option>
+          <option>Engine</option>
+          <option>Other</option>
+        </select>
+      </div>
+
+      <div class="form-group col-md-2 ">
+        <label>Work Assigned To </label>
+        <input type="text" class="form-control"/>
+      </div>
+      <div class="form-group col-md-2 ">
+        <label>Invoice Number</label>
+        <input type="number" class="form-control"/>
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group col-md">
+        <label>Description</label>
+        <textarea class="form-control" rows="6"></textarea>
+      </div>
+    </div>
+
+    <button class="add_field_button btn btn-danger">Add More Cell</button>
+    <!-- <button class="remove_field_button btn btn-success">Remove Cell</button> -->
+
+    <table class="table table-bordered table-primary mt-1">
+      <thead>
+        <tr>
+          <th scope="col">Part Number</th>
+          <th scope="col">Part Name</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Price</th>
+          <th scope="col">Total</th>
+        </tr>
+      </thead>
+
+      <tbody class="input_fields_wrap">
+        <tr>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
+          <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
+          <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
+          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
+        </tr>
+        <tr>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
+          <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
+          <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
+          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
+        </tr>
+        <tr>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
+          <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
+          <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
+          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
+        </tr>
+        <tr>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
+          <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
+          <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
+          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
+        </tr>
+        <tr>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
+          <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
+          <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
+          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
+        </tr>
+        <tr>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
+          <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
+          <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
+          <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
+          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <input class="col-md-2 btn btn-md btn-primary" type="submit" value="Create">
+  </form>
+</div>
 
 
 {% endblock content %}
 
 <!-- Specific JS goes HERE --> 
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script src="{% static 'js/add_remove_input_field.js' %}"></script>
+{% endblock javascripts %}
