--- a/RoyalBikeSmith/user/templates/dashboard/jobcard.html
+++ b/RoyalBikeSmith/user/templates/dashboard/jobcard.html
@@ -21,48 +21,48 @@
 
     <div class="form-row">
       <div class="form-group col-md-2">
-        <label>First Name</label>
-        <input type="text" class="form-control"/>
+        <label>First Name:</label>
+        <input type="text" name="first_name" class="form-control"/>
       </div>
       <div class="form-group col-md-2">
-        <label>Last Name</label>
-        <input type="text" class="form-control" />
+        <label>Last Name:</label>
+        <input type="text" name="last_name" class="form-control" />
       </div>
       <div class="form-group col-md-2">
-        <label>Address</label>
-        <input type="text" class="form-control" />
+        <label>Address:</label>
+        <input type="text" name="address" class="form-control" />
       </div>
       <div class="form-group col-md-2">
-        <label>Mobile Number</label>
-        <input type="number" class="form-control" />
+        <label>Mobile Number:</label>
+        <input type="number" name="mobile_number" class="form-control" />
       </div>
       <div class="form-group col-md-2 ">
-        <label>Phone Number</label>
-        <input type="number" class="form-control"/>
+        <label>Phone Number:</label>
+        <input type="number" name="phone_number" class="form-control"/>
       </div>
       <div class="form-group col-md-2 ">
-        <label>Vehicle Name</label>
-        <input type="text" class="form-control"/>
+        <label>Vehicle Name:</label>
+        <input type="text" name="vechile_name" class="form-control"/>
       </div>
     </div>
 
     <div class="form-row mb-4">
       <div class="form-group col-md-2 ">
-        <label>Vehicle Model</label>
-        <input type="text" class="form-control"/>
+        <label>Vehicle Model:</label>
+        <input type="text" name="model_name" class="form-control"/>
       </div>
       <div class="form-group col-md-2 ">
-        <label>Register Number</label>
-        <input type="text" class="form-control"/>
+        <label>Register Number:</label>
+        <input type="text" name="registration_number" class="form-control"/>
       </div>
       <div class="form-group col-md-2 ">
         <label>Current Kilo-Meter</label>
-        <input type="number" class="form-control"/>
+        <input type="number" name="current_km" class="form-control"/>
       </div>
 
       <div class="form-group col-md-2">
         <label for="inputState">Maintenance Type</label>
-        <select id="inputState" class="form-control">
+        <select id="inputState" name="maintenance_type" class="form-control">
           <option selected>Full Service</option>
           <option>Chain</option>
           <option>Timing</option>
@@ -77,7 +77,7 @@
 
       <div class="form-group col-md-2 ">
         <label>Work Assigned To </label>
-        <input type="text" class="form-control"/>
+        <input type="text" name="work_assigned" class="form-control"/>
       </div>
       <div class="form-group col-md-2 ">
         <label>Invoice Number</label>
@@ -88,13 +88,13 @@
     <div class="form-row">
       <div class="form-group col-md">
         <label>Description</label>
-        <textarea class="form-control" rows="6"></textarea>
+        <textarea class="form-control" name="description" rows="6"></textarea>
       </div>
     </div>
 
     <button class="add_field_button btn btn-danger">Add More Cell</button>
     <!-- <button class="remove_field_button btn btn-success">Remove Cell</button> -->
-
+<!-- 
     <table class="table table-bordered table-primary mt-1">
       <thead>
         <tr>
@@ -150,7 +150,7 @@
           <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
         </tr>
       </tbody>
-    </table>
+    </table> -->
 
     <input class="col-md-2 btn btn-md btn-primary" type="submit" value="Create">
   </form>
