job card has also been saved success fully.

--- a/RoyalBikeSmith/user/templates/dashboard/jobcard.html
+++ b/RoyalBikeSmith/user/templates/dashboard/jobcard.html
@@ -6,13 +6,13 @@
 
 {% block content %}
 
-
+<!-- 
 <form method="POST">
   {% csrf_token %}
   {{ customer.as_p }}
   {{ jobcard.as_p }}
   <input type="submit" value="Submit">
-</form>
+</form> -->
 
 <div class=" m-4 p-4">
   <form method="POST">
