--- a/RoyalBikeSmith/user/templates/dashboard/jobcard.html
+++ b/RoyalBikeSmith/user/templates/dashboard/jobcard.html
@@ -115,7 +115,7 @@
           <td class="col-md-2"><input type="number" class="form-control" name="quantity"></td>
           <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
           <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
-          <td class="col-sm-1"><input type="checkbox" disabled class="form-control" name="record"></td>
+          <td class="col-sm-1"><button class="remove btn btn-danger disabled remove" type="button">Remove</button></td>
         </tr>
         
         <!-- <tr>
