job card list created

--- a/RoyalBikeSmith/user/templates/dashboard/jobcard.html
+++ b/RoyalBikeSmith/user/templates/dashboard/jobcard.html
@@ -93,8 +93,6 @@
     </div>
 
     <button class="add_field_button btn btn-danger">Add Cell</button>
-    <button class="delete_field_button btn btn-success">Delete Cell</button>
-    
 
     <table class="table table-bordered table-primary mt-1">
       <thead>
@@ -104,7 +102,7 @@
           <th scope="col">Quantity</th>
           <th scope="col">Price</th>
           <th scope="col">Total</th>
-          <th scope="col">Select Cell</th>
+          <th scope="col">Delete Cell</th>
         </tr>
       </thead>
 
@@ -112,12 +110,13 @@
         <tr>
           <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
           <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
-          <td class="col-md-2"><input type="number" class="form-control" name="quantity"></td>
-          <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
-          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
-          <td class="col-sm-1"><button class="remove btn btn-danger disabled remove" type="button">Remove</button></td>
+          <td class="col-md-2"><input type="number" class="form-control input" id="qty" name="quantity"></td>
+          <td class="col-md-2"><input onchange="getAmount()"  type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control input" id="price" name="price"></td>
+          <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" id="total" name="total"></td>
+          <td class="col-sm-1"><button class="btn btn-danger disabled" type="button">Remove</button></td>
         </tr>
         
+
         <!-- <tr>
           <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
           <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
