--- a/RoyalBikeSmith/user/templates/includes/sidenav.html
+++ b/RoyalBikeSmith/user/templates/includes/sidenav.html
@@ -28,9 +28,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="dashboard/tables.html">
+            <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="{% url 'listJobCard' %}">
               <i class="ni ni-bullet-list-67 text-default"></i>
-              <span class="nav-link-text">Tables</span>
+              <span class="nav-link-text">Job Card List</span>
             </a>
           </li>
           <!-- <li class="nav-item">
