--- a/RoyalBikeSmith/user/templates/test.html
+++ b/RoyalBikeSmith/user/templates/test.html
@@ -34,3 +34,6 @@
 </tr>
 
 <td class="col-sm-1"><a href="#" class="remove_field"><button class="btn btn-sm-1 btn-success" disabled>Delete</button></a></td>
+
+
+<tr><td class="col-md-2"><input type="text" class="form-control" name="part_number"></td><td class="col-md-2"><input type="text" class="form-control" name="part_name"></td><td class="col-md-2"><input type="number" class="form-control input" id="qty" name="quantity"></td><td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control input" id="price" name="price"></td><td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" id="total" name="total"></td><td class="col-sm-1"><button class="remove btn btn-danger remove" type="button">Remove</button></td></tr>
