change in models

--- a/RoyalBikeSmith/user/templates/dashboard/jobcard.html
+++ b/RoyalBikeSmith/user/templates/dashboard/jobcard.html
@@ -6,8 +6,8 @@
 
 {% block content %}
 
-<!-- 
-<form method="POST">
+
+<!-- <form method="POST">
   {% csrf_token %}
   {{ customer.as_p }}
   {{ jobcard.as_p }}
