--- a/RoyalBikeSmith/user/templates/registration/login.html
+++ b/RoyalBikeSmith/user/templates/registration/login.html
@@ -54,8 +54,8 @@
                             Forgot
                         </span>
 
-                        <a href="#" class="txt2">
-                            Username / Password?
+                        <a href="{% url "password_reset" %}" class="txt2">
+                            Password?
                         </a>
                     </li>
 
