--- a/RoyalBikeSmith/user/templates/includes/sidenav.html
+++ b/RoyalBikeSmith/user/templates/includes/sidenav.html
@@ -40,7 +40,7 @@
             </a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="register.html">
+            <a class="nav-link" href="{% url 'register' %}">
               <i class="ni ni-circle-08 text-pink"></i>
               <span class="nav-link-text">Register </span>
             </a>
